--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="<%= BASE_URL %>favicon-32x32.png"/>
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Jonny's World</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      From Sound Engineering to Machine Learning. This is Jonny's notes. A cumulation of notes taken during my wondrous
+        journeys in life
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
